forge/tests/error/failed_sat.frg
#lang forge
option verbose 0

sig Cell {}

test expect {    
    foo: {Cell != Cell} is sat
}
